--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 10;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,7 +12,6 @@ code {
     monospace;
 }
 
-.navbar-dark .navbar-brand {
-  color:white;
-
+.col-lg-12 mt-5 {
+  margin-top: 5 !important;
 }
