Controlled Form, Working App

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,57 @@
-.navbar-dark .navbar-brand {
-  color:white;
+.row-header{
+  margin:0px auto;
+  padding:0px auto;
+}
+
+.row-content {
+  margin:0px auto;
+  padding: 50px 0px 50px 0px;
+  border-bottom: 1px ridge;
+  min-height:400px;
+}
+
+.footer{
+  background-color: #0493e3;
+  margin:0px auto;
+  padding: 20px 0px 20px 0px;
+}
+.jumbotron {
+  padding:70px 30px 70px 30px;
+  margin:0px auto;
+  background: #0493e3 ;
+  color:floralwhite;
+}
+
+address{
+  font-size:80%;
+  margin:0px;
+  color:#0f0f0f;
+}
+
+.navbar-dark {
+  background-color: #243444;
+}
+
+a:link {
+  color: #0f0f0f;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #0f0f0f;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: #0f0f0f;
+  background-color: transparent;
+  text-decoration: underline;
 }
