--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,25 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
+
+.page-enter {
+  opacity: 0.01;
+  transform: translateX(-100%);
+}
+
+.page-enter-active {
+  opacity: 0.75;
+  transform: translateX(0%);
+  transition: all 90ms;
+}
+
+.page-exit {
+  opacity: 0.75;
+  transform: translateX(0%);
+}
+
+.page-exit-active {
+  opacity: 0.01;
+  transform: translateX(100%);
+  transition: all 100ms;
+}
